# UCY

./: .gitignore  LICENSE  MEDITATION.md  README.md  conftest.py  generator.py  pyproject.toml  pytest.ini  requirements.txt  test_cases.py  test_ucy.py  ucy.md  ucy.py
